src/test/ui/did_you_mean/recursion_limit_deref.stderr
error[E0055]: reached the recursion limit while auto-dereferencing `J`
  --> $DIR/recursion_limit_deref.rs:50:22
   |
LL |     let x: &Bottom = &t;
   |                      ^^ deref recursion limit reached
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "20"]` attribute to your crate (`recursion_limit_deref`)

error[E0308]: mismatched types
  --> $DIR/recursion_limit_deref.rs:50:22
   |
LL |     let x: &Bottom = &t;
   |            -------   ^^ expected struct `Bottom`, found struct `Top`
   |            |
   |            expected due to this
   |
   = note: expected reference `&Bottom`
              found reference `&Top`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0055, E0308.
For more information about an error, try `rustc --explain E0055`.
